--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,20 @@
         <activity android:name=".MenuActivity"
             android:screenOrientation="portrait">
         </activity>
+        <activity android:name=".TextDetectActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="org.tensorflow.demo.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            tools:replace="android:authorities">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
 
     </application>
 
