--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+
 
     <application android:allowBackup="true"
         android:debuggable="true"
@@ -58,6 +60,9 @@
             android:screenOrientation="portrait">
         </activity>
         <activity android:name=".BusActivity"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity android:name=".SttTest"
             android:screenOrientation="portrait">
         </activity>
 
