--- a/build.gradle
+++ b/build.gradle
@@ -86,7 +86,7 @@ android {
 
     if (nativeBuildSystem == 'cmake') {
         defaultConfig {
-            applicationId = 'org.tensorflow.demo'
+            applicationId = 'org.YourEyes.demo'
             minSdkVersion 21
             targetSdkVersion 23
             ndk {
