--- a/build.gradle
+++ b/build.gradle
@@ -197,4 +197,6 @@ dependencies {
     }
     implementation 'com.rmtheis:tess-two:9.0.0'
     implementation 'com.android.support:appcompat-v7:23.0.0'
+    implementation project(path: ':SDK_release_v2.0.0')
+    implementation 'com.google.code.findbugs:jsr305:2.0.1'
 }
