--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,9 @@
         android:label="YourEyes"
         android:icon="@drawable/logo_2"
         android:theme="@style/MaterialTheme"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="GoogleAppIndexingWarning"
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:usesCleartextTraffic="true">
 
         <activity android:name="org.YourEyes.demo.DetectorActivity"
                   android:screenOrientation="portrait"
@@ -67,6 +69,10 @@
             android:theme="@style/CustomTitle">
         </activity>
         <activity android:name="org.YourEyes.demo.informationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/CustomTitle">
+        </activity>
+        <activity android:name="org.YourEyes.demo.RealTimeStationInfo"
             android:screenOrientation="portrait"
             android:theme="@style/CustomTitle">
         </activity>
